sandbox  ui panel revision & settings updated